# include/ Makefile.am


# Install headers
nobase_dist_pkginclude_HEADERS = \
	./channels/AwgnChannel.h \
	./channels/AwgnChannel.hh \
	./channels/AwgnNoiseGenerator.h \
	./channels/BscChannel.h \
	./channels/CoherenceCoeffGenerator.h \
	./channels/CoherenceFading.h \
	./channels/CoherenceFading.hh \
	./channels/CompositeChannel.h \
	./channels/CompositeChannel.hh \
	./channels/MimoChannel.h \
	./channels/TransparentCoherenceFading.h \
	./channels/TransparentCoherenceFading.hh \
	./CodeBench.h \
	./codes/archive/CachedEncoder.h \
	./codes/archive/CachedEncoder.hh \
	./codes/archive/CachedMultiDecoder.h \
	./codes/archive/CachedMultiDecoder.hh \
	./codes/archive/IMultiDecoder.h \
	./codes/archive/IMultiEncoder.h \
	./codes/archive/LinearCheckNodeUpdater.h \
	./codes/DecodeResult.h \
	./codes/EncoderMultiplexer.h \
	./codes/fountain/LTDecoder.h \
	./codes/fountain/LTParityNeighborGenerator.h \
	./codes/fountain/ParityEncoder.h \
	./codes/fountain/RaptorDecoder.h \
	./codes/fountain/RaptorEncoder.h \
	./codes/IDecoder.h \
	./codes/IEncoder.h \
	./codes/ILLRDecoder.h \
	./codes/IMultiStreamDecoder.h \
	./codes/IMultiStreamEncoder.h \
	./codes/InterleavedDecoder.h \
	./codes/InterleavedDecoder.hh \
	./codes/InterleavedEncoder.h \
	./codes/ldpc/LinearCheckNodeUpdater.h \
	./codes/ldpc/MatrixLDPCCode.h \
	./codes/ldpc/MatrixLDPCDecoder.h \
	./codes/ldpc/MatrixLDPCEncoder.h \
	./codes/ldpc/MatrixLDPCNeighborGenerator.h \
	./codes/ldpc/SparseMatrix.h \
	./codes/ldpc/SparseMatrix.hh \
	./codes/ldpc/WifiLDPC.h \
	./codes/ldpc/WordWidthTransformer.h \
	./codes/ldpc/WordWidthTransformer.hh \
	./codes/MultiToSingleStreamDecoder.h \
	./codes/MultiToSingleStreamDecoder.hh \
	./codes/MultiToSingleStreamEncoder.h \
	./codes/null/NullDecoder.h \
	./codes/null/NullEncoder.h \
	./codes/puncturing/IPuncturingSchedule.h \
	./codes/puncturing/RepeatingPuncturingSchedule.h \
	./codes/puncturing/RoundRobinPuncturingSchedule.h \
	./codes/puncturing/StaticPuncturingSchedule.h \
	./codes/puncturing/StridedPuncturingSchedule.h \
	./codes/RandomPermutationGenerator.h \
	./codes/spinal/CodeFactory.h \
	./codes/spinal/Composites.h \
	./codes/spinal/FlatSymbolStorage.h \
	./codes/spinal/FlatSymbolStorage.hh \
	./codes/spinal/HashDecoder.h \
	./codes/spinal/HashDecoder.hh \
	./codes/spinal/HashEncoder.h \
	./codes/spinal/HashEncoder.hh \
	./codes/spinal/IHashDecoder.h \
	./codes/spinal/protocols/SequentialProtocol.h \
	./codes/spinal/protocols/SequentialProtocol.hh \
	./codes/spinal/protocols/StridedProtocol.h \
	./codes/spinal/SpinalBranchEvaluator.h \
	./codes/spinal/StubHashDecoder.h \
	./codes/strider/LayeredDecoder.h \
	./codes/strider/LayeredDecoder.hh \
	./codes/strider/LayeredEncoder.h \
	./codes/strider/LayerManipulator.h \
	./codes/strider/LayerSuperposition.h \
	./codes/strider/StriderFactory.h \
	./codes/strider/StriderGeneratorMatrix.h \
	./codes/strider/StriderInterleaver.h \
	./codes/strider/StriderTurboCode.h \
	./codes/SymbolToLLRDecoderAdaptor.h \
	./codes/SymbolToLLRDecoderAdaptor.hh \
	./codes/turbo/TurboCodec.h \
	./codes/turbo/TurboDecoder.h \
	./codes/turbo/TurboEncoder.h \
	./ComposedTransformation.h \
	./CrcDetector.h \
	./CrcPacketGenerator.h \
	./demappers/BitwiseDemapper.h \
	./demappers/BitwiseDemapper.hh \
	./demappers/BscDemapper.h \
	./demappers/IDemapper.h \
	./demappers/ItppDemapper.h \
	./demappers/ItppDemapper.hh \
	./demappers/NullDemapper.h \
	./mappers/ComplexLinearMapper.h \
	./mappers/GaussianMapper.h \
	./mappers/GrayMapper.h \
	./mappers/IMapper.h \
	./mappers/LinearMapper.h \
	./mappers/NormalDistribution.h \
	./mappers/QamMapper.h \
	./mappers/QPSKMapper.h \
	./mappers/SoftMapper.h \
	./mappers/TruncatedNormalDistribution.h \
	./OracleDetector.h \
	./PacketGenerator.h \
	./protocols/OneTryProtocol.h \
	./protocols/RateApproxProtocol.h \
	./TransformationAdaptor.h \
	./util/crc.h \
	./util/hashes/BitwiseXor.h \
	./util/hashes/ecrypt-config.h \
	./util/hashes/ecrypt-machine.h \
	./util/hashes/ecrypt-portable.h \
	./util/hashes/Lookup3Hash.h \
	./util/hashes/OneAtATimeHash.h \
	./util/hashes/salsa20.h \
	./util/hashes/SalsaHash.h \
	./util/hashes/ShiftRegisterAdaptorHash.h \
	./util/hashes/SingleSymbolFunction.h \
	./util/hashes/SWIGHash.h \
	./util/hashes/UnlimitedHash.h \
	./util/hashes/UnlimitedHash.hh \
	./util/inference/bp/BipartiteBP.h \
	./util/inference/bp/BipartiteGraph.h \
	./util/inference/bp/BPMessage.h \
	./util/inference/bp/ElementHeap.h \
	./util/inference/bp/LinearVariableNodeUpdater.h \
	./util/inference/bp/MessagePassingDecoder.h \
	./util/inference/bp/MessagePassingDecoder.hh \
	./util/inference/bp/MultiStack.h \
	./util/inference/bp/MultiVector.h \
	./util/inference/bp/NodeUpdater.h \
	./util/inference/hmm/Backtracker.h \
	./util/inference/hmm/BeamSearch.h \
	./util/inference/hmm/BestK.h \
	./util/inference/hmm/DualPool.h \
	./util/inference/hmm/IPruner.h \
	./util/inference/hmm/LookaheadAdaptor.h \
	./util/inference/hmm/LookaheadBeamSearch.h \
	./util/inference/hmm/ParallelBestK.h \
	./util/ItppUtils.h \
	./util/MTRand.h \
	./util/BitStatCounter.h \
	./util/BlockStatCounter.h \
	./util/Utils.h